# Web-1-Website-Project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
project/: README.md
tests/: test_css_requirements.py  test_html_requirements.py  test_layout_requirements.py  test_validity.py
