[tool.poetry]
name = "about-me-html-project"
version = "0.1.0"
description = ""
authors = ["Chris Winikka <3827026+HundredVisionsGuy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.8"
html5validator = "^0.4.2"
pytest = "^7.4.0"
webcode-tk = "*"
file-clerk = "^1.1.2"
toml-to-requirements = "^0.2.0"
pre-commit = "^3.5.0"
poetry-plugin-export = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
