[tool.poetry]
name = "my-website-project"
version = "0.1.0"
description = ""
authors = ["Chris Winikka <3827026+HundredVisionsGuy@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.8"
html5validator = "*"
pytest = "*"
webcode-tk = "*"
file-clerk = "*"
toml-to-requirements = "*"
pre-commit = "*"
poetry-plugin-export = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
